feat: adiciona teste no endpoint findAll